--- a/app/_components/BlogList/index.module.css
+++ b/app/_components/BlogList/index.module.css
@@ -20,9 +20,11 @@
 }
 
 .image {
-  width: 160px;
-  height: auto;
+  width: 140px;
+  height: 80px;
   border-radius: var(--border-radius);
+  object-fit: cover;
+  flex-shrink: 0;
 }
 
 .contents {
