--- a/app/_components/Article/index.module.css
+++ b/app/_components/Article/index.module.css
@@ -100,6 +100,15 @@
 
 .thumbnail {
   width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin-bottom: 32px;
+}
+
+.thumbnail {
+  width: 100%;
   max-width: 600px;
   height: auto;
   margin: 0 auto 64px;
